# REUAnalysis

./: README.md  analysis.zok  optimize.py  optimize.zok  pairingProof.zok.zok  paramaterProof.py  paramaterProof.zok
AccessControlContract/: AccessControlContract.sol  gas-analysis-csv.js  manual-params-output.js
abe-proof/: Cargo.toml
abe-proof/src/: circuit.rs  main.rs
elgamal-proof/: Cargo.toml
elgamal-proof/src/: circuit.rs  el-gamal-proof.txt  main.rs
pairing-proof/: Cargo.toml
pairing-proof/src/: circuit.rs  main.rs
reverse-auction/: Reverse_Auction.sol  auctionProof.zok  generate-auction-params.js  test-proof-time.js  verifier.sol
