[package]
name = "elgamal-proof"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-r1cs-std = { version = "0.5.0-alpha.0", features = ["std"] }
ark-relations = "0.5.0"
ark-groth16 = "0.5.0"
ark-bn254 = "0.5.0"
ark-bls12-381 = "0.5.0"
ark-crypto-primitives = { version = "0.5", features = ["crh", "r1cs"] }
ark-std = { version = "0.5.0", features = ["std"] }
ark-serialize = "0.5.0"
sha2 = "0.10"
hex = "0.4"

